test/resources/inspections/latex/filenotfound/subfilestest/subdir/subsubdir/twodown.tex
% Path to main file should be relative to this file
\documentclass[<error descr="File 'main.tex' not found">main.tex</error>]{../../subfiles}

\begin{document}
    subfile
\end{document}